test.log

> sloticon-client@0.1.0 test
> craco test --watchAll=false

FAIL src/components/CreditExchange.test.tsx
  ● Test suite failed to run

    Cannot find module '@testing-library/jest-dom/extend-expect' from 'src/components/CreditExchange.test.tsx'

      2 | import React from 'react';
      3 | import { render, screen, fireEvent } from '@testing-library/react';
    > 4 | import '@testing-library/jest-dom/extend-expect';
        | ^
      5 | import CreditExchange from './CreditExchange';
      6 |
      7 | test('renders CreditExchange component', () => {

      at Resolver.resolveModule (node_modules/jest-resolve/build/resolver.js:324:11)
      at Object.<anonymous> (src/components/CreditExchange.test.tsx:4:1)

FAIL src/App.test.js
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/user/sloticon/node_modules/axios/index.js:1
    ({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){import axios from './lib/axios.js';
                                                                                      ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      2 | import './Game.scss';
      3 | import { useNavigate, useParams } from 'react-router-dom';
    > 4 | import axios from 'axios';
        | ^
      5 | import { SocketContext } from '../../context/socket';
      6 | import * as PIXI from 'pixi.js';
      7 | import Reel from '../../slot/Reel';

      at Runtime.createScriptFromCode (node_modules/react-scripts/node_modules/jest-runtime/build/index.js:1728:14)
      at Object.<anonymous> (src/features/game/Game.js:4:1)
      at Object.<anonymous> (src/App.js:7:1)
      at Object.<anonymous> (src/App.test.js:2:1)

Test Suites: 2 failed, 2 total
Tests:       0 total
Snapshots:   0 total
Time:        2.23 s
Ran all test suites.
